Closed
Bug 629100
Opened 15 years ago
Closed 15 years ago
Fullscreen video stretches top and bottom rows of pixels to edge of screen
Categories
(Core :: Graphics, defect, P2)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
fennec | 2.0b5+ | --- |
People
(Reporter: mfinkle, Assigned: alexp)
References
()
Details
(Keywords: mobile, regression)
Attachments
(2 files)
34.01 KB,
image/png
|
Details | |
1.54 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
We'd expect black areas above and below the video area, which is centered, but we see that the pixels from the edge of the video is stretched to the top (and bottom) of the screen.
Reporter | ||
Updated•15 years ago
|
tracking-fennec: --- → ?
Updated•15 years ago
|
Priority: -- → P2
Updated•15 years ago
|
Updated•15 years ago
|
tracking-fennec: ? → 2.0b5+
Updated•15 years ago
|
Assignee: nobody → alexp
Reporter | ||
Comment 1•15 years ago
|
||
Alex - any update here?
Assignee | ||
Comment 2•15 years ago
|
||
I'm on it!
Sorry for a delay - I was investigating a couple of crash bugs, and then had issues with my build, which was crashing every time while opening the page with the video.
Finally I have a usable build, and at least can see and debug the issue.
Assignee | ||
Comment 3•15 years ago
|
||
Assignee | ||
Comment 4•15 years ago
|
||
This doesn't happen in Beta 3 - apparently something changed recently caused this issue.
Assignee | ||
Comment 5•15 years ago
|
||
Seems like the issue was introduced between the builds 20110125044444 and 20110126042414.
What related to video rendering did land around January 25-26?
Comment 6•15 years ago
|
||
Updated•15 years ago
|
Keywords: regressionwindow-wanted
Assignee | ||
Comment 7•15 years ago
|
||
And the winner is...
The first bad revision is:
changeset: 61312:73bfa3627d0c
user: Chris Jones <jones.chris.g@gmail.com>
date: Wed Jan 26 00:26:37 2011 -0600
summary: Bug 627273, part 4: Basic impl of ImageLayer tiling for basic layers. r=roc,vlad
http://hg.mozilla.org/mozilla-central/rev/73bfa3627d0c
Guys, can you have a look at this change please. Something is wrong with those rectangles.
Sorry, your bisect found a known-broken changeset. Note the followups
657f6dac1e0c
2011-01-26 13:25 -0600 Chris Jones - Followup to bug 627273: Fix bad fix. r=Bas a=b
0e42a4b9e952
2011-01-26 16:12 -0600 Chris Jones - Fix for the fix for the fix of bug 627273. r=roc a=b
... but if 0e42a4b9e952 is still broken, then it's bug 627273.
Assignee | ||
Comment 10•15 years ago
|
||
Yes, I noticed there were fixes for the fixes in that bug, but just wanted to find the actual change, which started it.
The fact is that the issue with edge pixels spreading appeared with the change 61312:73bfa3627d0c, and 61347:0e42a4b9e952 did not fix it.
By the way, the first "fix for the fix" (61339:657f6dac1e0c) propagated this problem to the paused video as well, and 61347 fixed that. The static image of the paused video now looks fine, but the problem is still there when the video is playing.
Do you have any clues on why this spreading happens, and what I could try to fix it?
I'll have another look at the actual changes but just a simple method of trial-and-error is not very effective - need some hints from someone who knows the details of the fix.
Updated•15 years ago
|
Assignee | ||
Comment 11•15 years ago
|
||
Fixed the same way as in the last patch in bug 627273, only for the BasicShadowImageLayer.
Graphics guys, can you please confirm if it's a correct approach.
Attachment #511905 -
Flags: review?(roc)
Attachment #511905 -
Flags: review?(roc) → review+
Reporter | ||
Comment 12•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•