Bug 629100 - Fullscreen video stretches top and bottom rows of pixels to edge of screen [r=roc a=blocking-fennec]